# poly_eduardo

./: .gitignore  CMakeLists.txt
config/: FindFFMPEG.cmake  FindSFML.cmake  FindWebcam.cmake
gui/: camerasettings.cpp  camerasettings.h  camerasettings.ui  controls.cpp  controls.h  controls.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencamera.cpp  opencamera.h  opencamera.ui  patternselection.cpp  patternselection.h  patternselection.ui  player.cpp  player.h  player.ui  rgbhistogram.cpp  rgbhistogram.h  videoplayer.cpp  videoplayer.h
kernels/: CMakeLists.txt
libs/: CMakeLists.txt
libs/classifiers/: CMakeLists.txt  pattern.cpp  polymahalanobis.cpp  polymahalanobis.h
libs/common/: CMakeLists.txt  point3d.cpp  point3d.h
libs/decoders/: CMakeLists.txt  decoderbasis.cpp  decoderbasis.h  opencvthread.cpp  opencvthread.h
libs/filters/: CMakeLists.txt  conversion.cpp  conversion.h  filtersbasis.cpp  filtersbasis.h  morphology.cpp  morphology.h  threshold.cpp  threshold.h
libs/webcamwrapper/: CMakeLists.txt  webcamwrapper.cpp  webcamwrapper.h
src/: colorlist.cpp  colorlist.h  main.cpp
